updated test names

--- a/TrackYourCatchCO/src/index.html
+++ b/TrackYourCatchCO/src/index.html
@@ -16,6 +16,7 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <noscript>JavaScript is Disabled but is required to run the application.  Please enable JavaScript in order to access this website.</noscript>
   <!-- JavaScript Bundle with Popper -->
 </body>
 </html>
